# youtube-transcript-mcp

./: .gitignore  .kata.toml  AGENTS.md  CLAUDE.md  LICENSE  NOTICE  README.md  RELEASE_NOTES_v0.2.0.md  RELEASE_NOTES_v0.3.0.md  pyproject.toml  requirements.txt
docs/: COMPLIANCE-REPORT.md  LICENSE-AUDIT.md  README.md  alexandria-integration-plan.md  development-process.md
docs/plans/: 2025-12-04-temp-file-output-design.md  2025-12-04-temp-file-output.md
src/youtube_transcript_mcp/: __init__.py  server.py  test_server.py
tests/: test_temp_file_output.py
third-party-licenses/: mcp.txt  pydantic.txt  youtube-transcript-api.txt
