[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "youtube-transcript-mcp"
version = "0.2.0"
description = "A reliable Model Context Protocol server for extracting YouTube video transcripts"
authors = [{name = "Jerry Snitselaar", email = "dev@snitselaar.org"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "youtube-transcript-api==1.2.2",
    "mcp==1.1.2",
    "pydantic==2.8.2",
]

[project.urls]
Homepage = "https://github.com/jsnitsel/youtube-transcript-mcp"
Repository = "https://github.com/jsnitsel/youtube-transcript-mcp"

[project.scripts]
youtube-transcript-mcp = "youtube_transcript_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
